--- a/bin/AzureSetup.cfg
+++ b/bin/AzureSetup.cfg
@@ -1,5 +1,6 @@
 interpreter_path=%INTERPRETERPATH%
-interpreter_path_emulated=C:\Users\Chase\AppData\Local\Programs\Python\Python35-32\python.exe
-interpreter_version=3.5
+interpreter_path_emulated=C:\Python34\python.exe
+interpreter_version=3.4
 python_path_variable=PYTHONPATH
 python_path=%ROOTDIR%
+webpi_install=https://www.microsoft.com/web/webpi/5.0/webproductlist.xml;Python34
